# StudentDB-CandCxxHomework

./: .gitignore  CMakeLists.txt  main.cpp
start/: compareWithName.cpp  compareWithScore.cpp  del.cpp  displayEntry.cpp  findWithId.cpp  input.cpp  inputEntry.cpp  interface.h  menu.h  modify.cpp  output.cpp  primitive.h  read_from_file.cpp  search.cpp  sortArr.cpp  sort_na.cpp  sort_nd.cpp  sort_sa.cpp  sort_sd.cpp  write_to_file.cpp
